--- a/backend/src/main/resources/templates/edit_profile_template.html
+++ b/backend/src/main/resources/templates/edit_profile_template.html
@@ -47,6 +47,7 @@
             Update Profile
           </button>
         </div>
+        <input type="hidden" name="_csrf" value="{{token}}"/>
       </form>
     </div>
   </div>
