--- a/backend/src/main/resources/templates/login_template.html
+++ b/backend/src/main/resources/templates/login_template.html
@@ -23,6 +23,7 @@
               class="form-control"
               placeholder="Password"
             />
+            <input type="hidden" name="_csrf" value="{{token}}"/>
           </div>
           <div class="col-12 d-flex justify-content-center mt-3">
             <button type="submit" class="btn btn-primary col-12">Login</button>
