--- a/backend/src/main/resources/templates/register.html
+++ b/backend/src/main/resources/templates/register.html
@@ -45,6 +45,7 @@
               Sign up
             </button>
           </div>
+          <input type="hidden" name="_csrf" value="{{token}}"/>
         </form>
         <hr class="mt-4" />
         <div class="col-12 text-center">
